# KOnezumi-AID

./: .gitignore  DataReadme.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pytest.yml  python_publish.yml
.ipynb_checkpoints/: ORF-checkpoint.ipynb
ORF/: ORF.ipynb  output.bed
scr/: make_dataset.py  plus_target.py  plus_transrate_codonnum_to_genenum.py
scripts/: ATGの位置を出す.ipynb  ORF.ipynb  example.py  gene_labeling  gene_name.ipynb  sgRNA.ipynb  strand-minus.ipynb  strand-minus_sgRNA.ipynb  strand-minus_sgRNA.py  strand_plus.ipynb  strand_plus_sgRNA.ipynb  strand_plus_sgRNA.py  狙える塩基.ipynb  狙える塩基_strand_plus.ipynb  狙える塩基番号.ipynb
scripts/.ipynb_checkpoints/: ORF-checkpoint.ipynb  狙える塩基_strand_plus-checkpoint.ipynb
src/: change_exon_index_to_gene.py  check_primer_quality.py  convert_refflat_to_bed.py  create_gene_dataclass.py  export_dataset_as_pkl.py  export_refflat_txt_to_csv.py  export_refflat_txt_to_pkl.py  generate__sorted_genedata_from_refflat.py  generate_seq_dict_from_fasta.py  generate_sorted_genedata_from_refflat.py  get_candidate_stopcodon_index.py  get_candidate_stopcodon_num.py  get_cds_seq.py  get_guiderna_index.py  get_guiderna_seq.py  get_num_of_exon_primer_isin.py  get_primer_isin_num_of_exon.py  get_range_of_exon.py  get_reverse_complement.py  import_dataset.py  main.py  make_dataset.py  make_rtpcr_primer.py  plus_get_sgRNA_seq.py  plus_get_target_num.py  plus_transrate_codonnum_to_genenum.py  select_good_primers.py  set_gene_dataclass.py  set_gene_dataframe.py  translate_bed_from_refflat.sh
src/adjust_nmd_rules/: create_grna_lsit.py  main.py  rete_position.py
src/get_rtpcr_primer/: add_uniqueness.py  check_primer_quality.py  export_fasta.py  get_uniqueness.sh  label_primers_quality.py  main.py  make_rtpcr_primer.py  rate_quality.py  select_good_primer.py  verify_primer_uniqueness.sh
src/konezumiaid/: DATAREADME.md  create_gene_dataclass.py  export_dataset_as_pkl.py  format_output.py  generate_seq_dict_from_fasta.py  generate_sorted_genedata_from_refflat.py  get_exon_range.py  get_range_of_exon.py  get_reverse_complement.py  main.py
src/nominate_candidate_stopcodon/: export_refflat_txt_to_pkl.py  find_candidate_stopcodon.py  find_guiderna_seq.py  generate_cds_seq.py  get_cds_seq.py  get_guiderna_index.py  main.py  make_grna_from_index.py  search_candidate_codon.py  transform_candidateindex_to_grne_seq.py  transform_candidateseq_to_index.py  (+4 more)
tests/data/: example.fasta  (+7 more)
(+114 files in other folders)
