[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "KOnezumiAID"
version = "0.1.0"
description = "Project description"
authors = ["Taki Taito <s2110307@u.tsukuba.ac.jp>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.0"
pandas = "^2.1.1"
primer3-py = "^2.0.1"

[tool.poetry.scripts]
KOnezumiAID = "konezumiaid.main:main"