[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "KOnezumiAID"
version = "0.2.2"
description = "This is used for automatically designing gRNAs for genome editing by Target-AID."
authors = ["Taki Taito <s2110307@u.tsukuba.ac.jp>"]
readme = "README.md"
homepage = "https://github.com/aki2274/KOnezumi-AID"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.26.0"  
pandas = "2.2.2"
primer3-py = "^2.0.1"
bedtools = "2.28.0"
bowtie = "1.1.2"

[tool.poetry.scripts]
konezumiaid = "konezumiaid.main:main"
